--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "eventbus lib for typescript",
   "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "scripts": {
     "build": "rimraf lib && rollup -c",
     "dev": "rollup -c -w",
