--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-eventbus",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "eventbus lib for typescript",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -38,6 +38,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
@@ -45,14 +46,14 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.2.3",
-    "@types/ms": "^0.7.31",
     "rollup": "^2.44.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-node": "^9.1.1",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   }
 }
